--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.1",
@@ -40,6 +40,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
